[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
glob = "0.3.0"
path-absolutize = "3.0.14"
ptree = "0.4.0"
walkdir = "2.3.2"
